--- a/popup.html
+++ b/popup.html
@@ -28,7 +28,7 @@
 					text-align:left;
 	  }
     </style>
-	<script src="jquery-3.2.1.slim.min.js"></script>
+	<script src="jquery-3.2.1.min.js"></script>
     <script src="popup.js"></script>
 	
 	
