My final version commit =)

--- a/table.html
+++ b/table.html
@@ -1,29 +1,31 @@
-<!doctype html>
-<html>
-<table>
-    <tr>
-        <th> The property details</th>
-    </tr>
+<table class="homeSpace">
     <tr>
         <th>Attribute</th>
         <th>Value</th>
-    <tr>
-        <th>Address</th>
     </tr>
     <tr>
-        <th>Price</th>
+        <th><b>Address</b></th>
+        <td> fsdfdfss</td>
     </tr>
     <tr>
-        <th>Suburb</th>
+        <th><b>Price</b></th>
+        <td>fdsfsdfd</td>
     </tr>
     <tr>
-        <th>Bedrooms</th>
+        <th><b>Suburb</b></th>
+        <td>fdsfsdfd</td>
     </tr>
     <tr>
-        <th>City</th>
+        <th><b>Bedrooms</b></th>
+        <td>fdsfsdfd</td>
     </tr>
     <tr>
-        <th>Sun</th>
+        <th><b>City</b></th>
+        <td>fdsfsdfd</td>
     </tr>
+    <tr>
+        <th><b>Sun</b></th>
+        <td>fdsfsdfd</td>
+    </tr>
+
 </table>
-</html>
