--- a/popup.html
+++ b/popup.html
@@ -2,14 +2,14 @@
 <html>
 <head>
 
-<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Rubik:700" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Lato:300" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Montserrat:300" rel="stylesheet">
     <title>Home Space</title>
     <style>
         body {
             font-family: 'Lato', sans-serif;
             font-size: 100%;
-			background-color: #D3D3D3;
+			background-color: #5FAD56	;
 			width: 600px;
 			
         }
@@ -18,46 +18,49 @@
 				float: left;
 				width: 100px;
 				height: 100px;
-				background-color: #fff;
-				border-radius: 35%;
+				background-color: #5FAD56;
+				margin-bottom: 20px;
+				padding:10px;
 				}
 		
 		h1 {
-			font-family: 'Rubik', sans-serif;
+			font-family: 'Montserrat', sans-serif;
 			position: relative;
 			top: 18px;
 			left: 10px;
+			color: #fff;
 		}
+		
+		h3{
+		    position: relative;
+			left: 10px;
+			color: #fff;
+		}
+		
 
 
         table {
-            *border-colapse: colapse;
-			border: black;
-			width: 100%;
-			<!-- border-spacing: 0; -->
+            border-collapse: collapse;
+			border: 1px solid #DEB1CC;
+			width: 90%;
+			border-spacing: 0;
+			margin:20px;
+			padding:50px;
+			
         }
 		
-		table th:first-child {
-    border-radius: 6px 0 0 0;
-}
-
-table th:last-child {
-    border-radius: 0 6px 0 0;
-}
-
-table th:only-child{
-    border-radius: 6px 6px 0 0;
-}
-
 table th {
-			background-color: #000080;
+			background-color: #C681AB;
+			border: 1px solid #DEB1CC;
 			color:white;
 			padding: 5px;
 			text-align: left;
 }
 
-table td{
+table td {
+		
 		background-color:white;
+		border: 1px solid #DEB1CC;
 		color:black;
 		font-family:'Lato', sans-serif;
 		padding: 5px;
@@ -70,6 +73,7 @@ td, th {
     text-align: left;
 }
 
+th {background-color: #FFE2CC}
 
 
         
@@ -81,11 +85,12 @@ td, th {
 
 <body>
 <img src="homeIcon.png" alt="logo" />
-<h1> Home Space::<br> Is This Your New Home? </h1>
+<h1> Home Space</h1>
+<h3> Is This A Good Home For You? <h3>
 <table>
 		<tr>
-		<th>Attribute</th>
-		<th>Value</th> 
+		<th>Aspect</th>
+		<th>Data</th> 
     </tr>
     
     <tr>
