getting average sunlight on indivdual listing pages DOM

--- a/popup.html
+++ b/popup.html
@@ -11,9 +11,9 @@
             font-size: 100%;
 			background-color: #5FAD56	;
 			width: 600px;
-			
+
         }
-		
+
 		img {
 				float: left;
 				width: 100px;
@@ -22,7 +22,7 @@
 				margin-bottom: 20px;
 				padding:10px;
 				}
-		
+
 		h1 {
 			font-family: 'Montserrat', sans-serif;
 			position: relative;
@@ -30,13 +30,13 @@
 			left: 10px;
 			color: #fff;
 		}
-		
+
 		h3{
 		    position: relative;
 			left: 10px;
 			color: #fff;
 		}
-		
+
 
 
         table {
@@ -46,9 +46,9 @@
 			border-spacing: 0;
 			margin:20px;
 			padding:50px;
-			
+
         }
-		
+
 table th {
 			background-color: #C681AB;
 			border: 1px solid #DEB1CC;
@@ -58,7 +58,7 @@ table th {
 }
 
 table td {
-		
+
 		background-color:white;
 		border: 1px solid #DEB1CC;
 		color:black;
@@ -93,7 +93,7 @@ th {
 <table>
 		<tr>
 		<th>Aspect</th>
-		<th>Data</th> 
+		<th>Data</th>
 		</tr>
 		<tr>
         <th><b>Address</b></th>
@@ -117,10 +117,9 @@ th {
     </tr>
     <tr>
         <th><b>Sun</b></th>
-        <td>fdsfsdfd</td>
+        <td id="sun">NA</td>
     </tr>
 
 </table>
 </body>
 </html>
-
